--- a/script/references.bib
+++ b/script/references.bib
@@ -233,3 +233,180 @@
 	url = {https://www.cambridge.org/core/journals/political-analysis/article/abs/automated-text-classification-of-news-articles-a-practical-guide/10462DB284B1CD80C0FAE796AD786BC6},
 	note = {Publisher: Cambridge University Press}
 }
+
+@article{tanskanen2017,
+	title = {Towards evidence-based management of external resources: Developing design propositions and future research avenues through research synthesis},
+	author = {Tanskanen, Kari and Ahola, Tuomas and Aminoff, Anna and Bragge, Johanna and Kaipia, Riikka and Kauppi, Katri},
+	year = {2017},
+	month = {07},
+	date = {2017-07-01},
+	journal = {Research Policy},
+	pages = {1087--1105},
+	volume = {46},
+	number = {6},
+	doi = {10.1016/j.respol.2017.04.002},
+	url = {https://www.sciencedirect.com/science/article/pii/S0048733317300653},
+	langid = {en}
+}
+
+@article{debattisti2015,
+	title = {A decade of research in statistics: a topic model approach},
+	author = {De Battisti, Francesca and Ferrara, Alfio and Salini, Silvia},
+	year = {2015},
+	month = {03},
+	date = {2015-03-12},
+	journal = {Scientometrics 2015 103:2},
+	pages = {413--433},
+	volume = {103},
+	number = {2},
+	doi = {10.1007/S11192-015-1554-1},
+	url = {https://link.springer.com/article/10.1007/s11192-015-1554-1},
+	note = {Publisher: Springer}
+}
+
+@article{debattisti2015,
+	title = {A decade of research in statistics: a topic model approach},
+	author = {De Battisti, Francesca and Ferrara, Alfio and Salini, Silvia},
+	year = {2015},
+	month = {03},
+	date = {2015-03-12},
+	journal = {Scientometrics 2015 103:2},
+	pages = {413--433},
+	volume = {103},
+	number = {2},
+	doi = {10.1007/S11192-015-1554-1},
+	url = {https://link.springer.com/article/10.1007/s11192-015-1554-1},
+	note = {Publisher: Springer}
+}
+
+@article{ambrosino2018,
+	title = {What topic modeling could reveal about the evolution of economics},
+	author = {Ambrosino, Angela and Cedrini, Mario and Davis, John B. and Fiori, Stefano and Guerzoni, Marco and Nuccio, Massimiliano},
+	year = {2018},
+	month = {10},
+	date = {2018-10},
+	journal = {Journal of Economic Methodology},
+	pages = {329--348},
+	volume = {25},
+	number = {4},
+	doi = {10.1080/1350178X.2018.1529215},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/1350178X.2018.1529215},
+	note = {Publisher: Routledge}
+}
+
+@article{ambrosino2018,
+	title = {What topic modeling could reveal about the evolution of economics},
+	author = {Ambrosino, Angela and Cedrini, Mario and Davis, John B. and Fiori, Stefano and Guerzoni, Marco and Nuccio, Massimiliano},
+	year = {2018},
+	month = {10},
+	date = {2018-10},
+	journal = {Journal of Economic Methodology},
+	pages = {329--348},
+	volume = {25},
+	number = {4},
+	doi = {10.1080/1350178X.2018.1529215},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/1350178X.2018.1529215},
+	note = {Publisher: Routledge}
+}
+
+@article{wehrheim2019,
+	title = {Economic history goes digital: topic modeling the Journal of Economic History},
+	author = {Wehrheim, Lino},
+	year = {2019},
+	month = {01},
+	date = {2019-01-08},
+	journal = {Cliometrica},
+	pages = {83--125},
+	volume = {13},
+	number = {1},
+	doi = {10.1007/S11698-018-0171-7/TABLES/4},
+	url = {https://link.springer.com/article/10.1007/s11698-018-0171-7},
+	note = {Publisher: Springer Verlag}
+}
+
+@article{antons2020b,
+	title = {The application of text mining methods in innovation research: current state, evolution patterns, and development priorities},
+	author = {Antons, David and {Grünwald}, Eduard and Cichy, Patrick and Salge, Torsten Oliver},
+	year = {2020},
+	month = {06},
+	date = {2020-06},
+	journal = {R&D Management},
+	pages = {329--351},
+	volume = {50},
+	number = {3},
+	doi = {10.1111/RADM.12408},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/abs/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/10.1111/radm.12408},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{antons2017,
+	title = {Big Data, Big Insights? Advancing Service Innovation and Design With Machine Learning:},
+	author = {Antons, David and Breidbach, Christoph F.},
+	year = {2017},
+	month = {12},
+	date = {2017-12},
+	journal = {Journal of Service Research},
+	pages = {17--39},
+	volume = {21},
+	number = {1},
+	doi = {10.1177/1094670517738373},
+	url = {https://journals.sagepub.com/doi/abs/10.1177/1094670517738373},
+	note = {Publisher: SAGE PublicationsSage CA: Los Angeles, CA}
+}
+
+@article{sengan11,
+	title = {Enhancing cyber-physical systems with hybrid smart city cyber security architecture for secure public data-smart network},
+	author = {Sengan, Sudhakar and Subramaniyaswamy, V. and Nair, Sreekumar Krishnan and Indragandhi, V. and Manikandan, J. and Ravi, Logesh},
+	year = {11},
+	date = {11},
+	journal = {Future Generation Computer Systems-the International Journal of Escience},
+	pages = {724--737},
+	volume = {112},
+	doi = {10.1016/j.future.2020.06.028},
+	langid = {English}
+}
+
+@article{hannigan2019,
+	title = {Topic Modeling in Management Research: Rendering New Theory from Textual Data},
+	author = {Hannigan, Timothy R. and Haan, Richard F.J. and Vakili, Keyvan and Tchalian, Hovig and Glaser, Vern L. and Wang, Milo Shaoqing and Kaplan, Sarah and Jennings, P. Devereaux},
+	year = {2019},
+	month = {07},
+	date = {2019-07-15},
+	journal = {Academy of Management Annals},
+	pages = {586--632},
+	volume = {13},
+	number = {2},
+	doi = {10.5465/ANNALS.2017.0099},
+	url = {https://journals.aom.org/doi/abs/10.5465/annals.2017.0099},
+	note = {Publisher: Academy of Management AnnalsBriarcliff Manor, NY}
+}
+
+@article{antons2016,
+	title = {Mapping the Topic Landscape of JPIM, 1984{\textendash}2013: In Search of Hidden Structures and Development Trajectories},
+	author = {Antons, David and Kleer, Robin and Salge, Torsten Oliver},
+	year = {2016},
+	date = {2016},
+	journal = {Journal of Product Innovation Management},
+	pages = {726--749},
+	volume = {33},
+	number = {6},
+	doi = {10.1111/jpim.12300},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jpim.12300},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/jpim.12300},
+	langid = {en}
+}
+
+@article{rehs2020,
+	title = {A structural topic model approach to scientific reorientation of economics and chemistry after German reunification},
+	author = {Rehs, Andreas},
+	year = {2020},
+	month = {11},
+	date = {2020-11-01},
+	journal = {Scientometrics},
+	pages = {1229--1251},
+	volume = {125},
+	number = {2},
+	doi = {10.1007/S11192-020-03640-0/TABLES/4},
+	url = {https://link.springer.com/article/10.1007/s11192-020-03640-0},
+	note = {Publisher: Springer Science and Business Media B.V.}
+}
