--- a/script/references.bib
+++ b/script/references.bib
@@ -410,3 +410,13 @@
 	url = {https://link.springer.com/article/10.1007/s11192-020-03640-0},
 	note = {Publisher: Springer Science and Business Media B.V.}
 }
+
+@book{grimmer2022a,
+	title = {Text as data: a new framework for machine learning and the social sciences},
+	author = {Grimmer, Justin and Roberts, Margaret E. and Stewart, Brandon M.},
+	year = {2022},
+	date = {2022},
+	publisher = {Princeton University Press},
+	address = {Princeton, New Jersey Oxford},
+	langid = {eng}
+}
